tests/NormalTests/paczka1/fuzzy1/62760454.err
Error in line 2: hbfqbzhb S713 51,0
Error in line 10: hbfqbzhb A70 67,9
Error in line 13: TBJiHSMN S435 68,3
Error in line 28: fSERvbk9 S435 85,35
Error in line 30: fSERvbk9 S435 52,2
